# EvilStudio

./: CMakeLists.txt  main.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/micro_ui/: CMakeLists.txt
src/audio/: AudioBackend.cpp  AudioBackend.h  AudioDefinitions.h  AudioGenerator.h  audio_math.h  piano.h
src/audio/Generators/: WaveformGenerator.cpp  WaveformGenerator.h
src/audio/Sequencing/: Note.h  NoteSequence.cpp  NoteSequence.h  Pattern.cpp  Pattern.h  SequencerState.cpp  SequencerState.h  Voice.h
src/audio/midi/: MidiManager.cpp  MidiManager.h  MidiNote.h
src/ui/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Window.h  ui_macros.h
src/ui/text/: Font.cpp  Font.h
src/ui/windowing/: RenderWindow.cpp  RenderWindow.h
src/ui/windows/: GeneratorManagerWindow.cpp  GeneratorManagerWindow.h  GeneratorsWindow.cpp  GeneratorsWindow.h  PianoRollWindow.cpp  PianoRollWindow.h  SettingsWindow.cpp  SettingsWindow.h
